--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
-logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+title: Página personal
+logo: /assets/img/avatar_jcg.jpeg
+description: Esta es la página personal de Juan Carlos Carvajal
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
