--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Página personal
 logo: /assets/img/avatar_jcg.jpeg
-description: Esta es la página personal de Juan Carlos Carvajal
+description: Avatar de Juan Carlos Carvajal
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
