--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Página personal
 logo: /assets/img/avatar_jcg.jpeg
 description: Avatar de Juan Carlos Carvajal
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
