--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Página personal
+title:
 logo: /assets/img/avatar_jcg.jpeg
 description: Avatar de Juan Carlos Carvajal
 show_downloads: false
