--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Página Personal
+title: JCC | Perfil Profesional
 logo: /assets/img/avatar_jcg.jpeg
 description: Avatar de Juan Carlos Carvajal
 show_downloads: false
