--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: JCC | Perfil Profesional
 logo: /assets/img/avatar_jcg.jpeg
-description: Avatar de Juan Carlos Carvajal
+description:
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
