--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: JCC | Perfil Profesional
-logo: /assets/img/avatar_jcg.jpeg
+logo: /assets/img/IMG_4643.jpeg
 description: ""
 show_downloads: false
 google_analytics:
